syntax = "proto3";



message CheckVariableRequest {
  int32 channelID = 1;
  string message = 2;
  string channel = 3;
  string user = 4;
  string userID = 5;

}

message CheckVariableResponse {
  uint32 status = 1;
  string responseMessage = 2;
  string message = 3;

}



service variableService {
 rpc checkVariable(CheckVariableRequest) returns (CheckVariableResponse) {}
}




